syntax = "proto3";

option objc_class_prefix = "aufax";

package transaction;

service Transaction {
  rpc CreateSellOrder (CreateOrderRequest) returns (CreateOrderReply) {}
  rpc CreateBuyOrder (CreateOrderRequest) returns (CreateOrderReply) {}
  rpc GetSellOrders (GetSellOrdersRequest) returns (stream GetSellOrdersReply) {}
}

message CreateOrderRequest {
  string user_id = 1;
  string from_currency = 2;
  string to_currency = 3;
  float amount = 4;
  string price_id = 5;
  string type = 6;
}

message CreateOrderReply {
  string transaction_id = 1;
  string expires_at = 2;
}

message GetSellOrdersRequest {
  float amount = 1;
  string from_currency = 2;
  string to_currency = 3;
}

message GetSellOrdersReply {
  float amount = 1;
  string from_currency = 2;
  string to_currency = 3;
  float price = 4;
  string telegram_username = 5;
}

message EmptyReply {}