syntax = "proto3";

option objc_class_prefix = "aufax";

package user;

service User {
  rpc FindUserByTelegramUserIdOrCreateUser (CreateUserRequest) returns (CreateUserReply) {}
}

message CreateUserRequest {
  int32 telegram_from_user_id = 1;
  string telegram_username = 2;
  string telegram_private_chat_id = 3;
}

message CreateUserReply {
  string user_id = 1;
  int32 telegram_from_user_id = 2;
  string telegram_username = 3;
  int32 telegram_private_chat_id = 4;
  string telegram_user_id = 5;
}

message EmptyReply {}